testdata/errors/invalidname/invalidname.go
// some comment to move the 'package' line

package _
